--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,4 +4,8 @@
 <!-- common use通用字符串 -->
     <string name="app_name">uexDevice</string>
 
+    <!--uexDevice-->
+    <string name="plugin_uexdevice_invalid_params">Invalid Params</string>
+    <string name="plugin_uexdevice_request_read_phone_state_permission_hint_message">应用需要额外的权限以获取设备硬件信息</string>
+
 </resources>
